# cultivated-meat-process-model

./: .gitignore  .gitmodules  README.md  pyproject.toml
.github/workflows/: pages.yml
config/: baseline.yaml  brenner_2026.yaml
frontend/: index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: BottomNav.tsx  Breadcrumbs.tsx  EquipmentQuickView.tsx  EquipmentShape.tsx  EquipmentWorld.tsx  FactoryCanvas.tsx  FactoryFlow.tsx  ImpactPage.tsx  MassBalanceView.tsx  PhenomenonView.tsx  ProcessGuidePage.tsx  RawMaterialsPanel.tsx  StreamPanel.tsx
frontend/src/hooks/: navigation.ts  useFactory.ts  useImpact.ts  useProcessGuide.ts
frontend/src/types/: factory.ts  guide.ts
frontend/src/utils/: format.ts
notebooks/: 01_baseline_model.ipynb
src/cm_process_model/: __init__.py  api.py  brenner_data.py  calculations.py  flowsheet.py  impact_model.py  plant_topology.py  process_guide.py  process_steps.py  streams.py  utilities.py
src/cm_process_model/integrations/: bioreactor_adapter.py
src/cm_process_model/units/: __init__.py  downstream.py  formulation.py  harvest.py  media_prep.py  packaging.py  production_bioreactor.py  seed_train.py
tests/: test_flowsheet.py
webapp/: app.js  index.html  styles.css
webapp/webapp/: index.html
