[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cm-process-model"
version = "0.1.0"
description = "Process model for cultivated meat production"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.26",
    "pandas>=2.1",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
api = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
]
dev = [
    "pytest>=8.0",
    "ipykernel>=6.29",
    "jupyter>=1.0",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "httpx>=0.27",
]

[project.scripts]
cm-factory = "cm_process_model.api:main"

[tool.hatch.build.targets.wheel]
packages = ["src/cm_process_model"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
